--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+### Generic cache ###
+.DS_Store
+
+### PyCharm ###
+.idea/
+.python-version
+
 # C extensions
 *.so
 
@@ -99,3 +106,8 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+
+# sqlite db
+*.sqlite3
+
